--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: "Minecraft";
-  src: url("/assets/Minecraft.ttf");
-}
-
-@layer base {
-  .font-minecraft {
-    font-family: "Minecraft";
-  }
-}
-
+@import "minecraft.css";
 @import "border.css";
 
 @layer base {
